--- a/2_css/blogPosts/style.css
+++ b/2_css/blogPosts/style.css
@@ -1,6 +1,6 @@
 body {
-   margin: 0px;
-}
+   margin: 0;}
+
 
 h1 {
    font-family: 'Montserrat', sans-serif;
@@ -9,7 +9,7 @@ h1 {
 .post-container  {
    width: 70%;
    height: 100%;
-   margin: 0px auto 0px auto;
+   margin: 0 auto 0 auto;
    background-color: blanchedalmond;
 }
 
